fix(ui): .string color in textrequestbody was not visible

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -258,3 +258,7 @@ html[data-theme='dark'] .sl-elements .token.null.keyword {
 .sl-elements {
   font-size: 14px !important;
 }
+
+.sl-elements .TextRequestBody .token.string {
+  @apply !text-gray-200;
+}
